--- a/api_documentation.yml
+++ b/api_documentation.yml
@@ -182,6 +182,8 @@ paths:
           description: Request doesn't match the JSON schema. For exanmple title, director must be string, length and category_id must be integers and releas_date must be string with YYYY-MM-DD format.
         '404':
           description: The user/endpoint was not found.
+        '409':
+          description: Restrictions from the database e.g., foreign key constraints.
         '415':
           description: Unsupported media type. The request content type must be of type JSON.
     delete:
@@ -398,8 +400,6 @@ paths:
           description: The movie has been deleted
         '404':
           description: The movie was not found
-        '409':
-          description: Restrictions from the database e.g, foreign key constraints.
 
   /api/users/{user_id}/reviews/:
     parameters:
@@ -654,8 +654,8 @@ paths:
       responses:
         '204':
           description: The review has been deleted.
-        '409':
-          description: The movie/review was not found.
+        '404':
+          description: The review was not found
 
   /api/categories/:
     get:
