--- a/api_documentation.yml
+++ b/api_documentation.yml
@@ -425,7 +425,7 @@ paths:
                 - id: 1
                   rating: 3
                   comment: The movie is ok
-                  date: "2021-03-22"
+                  date: "2021-03-22T20:35:10Z"
                   author_id: 2
                   movie_id: 1
                   '@controls':
@@ -435,7 +435,7 @@ paths:
                 - id: 2
                   rating: 5
                   comment: The movie is great
-                  date: "2021-03-23"
+                  date: "2021-03-22T22:54:18Z"
                   author_id: 2
                   movie_id: 2
                   '@controls':
@@ -492,7 +492,7 @@ paths:
                         date:
                           description: The date on which the comment was written
                           type: string
-                          format: date
+                          format: date-time
                         author_id:
                           description: The id of the user which created the review which acts as foreign key
                           type: integer
@@ -504,7 +504,7 @@ paths:
                   - id: 3
                     rating:
                     comment: I didn't like the movie at all
-                    date: "2021-03-25"
+                    date: "2021-03-25T08:12:46Z"
                     author_id: 3
                     movie_id: 1
                     '@controls':
@@ -514,7 +514,7 @@ paths:
                   - id: 4
                     rating: 5
                     comment: A masterpiece !
-                    date: "2021-03-13"
+                    date: "2021-03-13T16:23:56Z"
                     author_id: 1
                     movie_id: 1
                     '@controls':
@@ -536,7 +536,7 @@ paths:
             example:
               rating: 1
               comment: A real disaster
-              date: "2022-01-17"
+              date: "2022-01-17T14:22:45Z"
               author_id: 3
               movie_id: 3
       responses:
@@ -570,7 +570,7 @@ paths:
                 id: 1
                 rating: 3
                 comment: The movie is ok
-                date: "2021-03-22"
+                date: "2019-04-25T11:40:51Z"
                 author_id: 2
                 movie_id: 1
                 '@namespaces':
@@ -607,7 +607,7 @@ paths:
                         date:
                           description: The date on which the comment was written
                           type: string
-                          format: date
+                          format: date-time
                         author_id:
                           description: The id of the user which created the review which acts as foreign key
                           type: integer
@@ -635,7 +635,7 @@ paths:
               example:
                 rating: 4
                 comment: The movie is ok, but I changed my mind, it's pretty good
-                date: "2021-03-23"
+                date: "2021-07-03T04:08:05Z"
                 author_id: 2
                 movie_id: 1
         '400':
@@ -841,7 +841,7 @@ components:
         date:
           description: The date on which the comment was written
           type: string
-          format: date
+          format: date-time
         author_id:
           description: The id of the user which created the review which acts as foreign key
           type: integer
