--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -26,7 +26,10 @@
         }
     },
     "rules": {
+        "no-use-before-define": "off",
+        "@typescript-eslint/no-use-before-define": ["error"],
         "react/jsx-filename-extension": [ "warn", {"extensions": [".tsx"]} ],
+        "react/destructuring-assignment": ["error", "never"],
         "import/extensions": [
             "error",
             "ignorePackages",
