--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "eslint": "eslint src/*",
     "eslint:fix": "eslint src/* --fix",
-    "start": "react-scripts start eslint",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
