--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -26,6 +26,7 @@
         }
     },
     "rules": {
+        "react/jsx-props-no-spreading": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "no-use-before-define": "off",
         "@typescript-eslint/no-use-before-define": ["error"],
